configured the swagger UI
