# src/routes/applicationRoutes.js
@@ -47,9 +47,7 @@ router.post(
     "/",
 
     /*
-     #swagger.security = [{
-        "sessionAuth": []
-    }]
+    
     #swagger.tags = ['Applications']
     #swagger.summary = 'Create application'
 
@@ -75,9 +73,7 @@ router.put(
     "/:id",
 
     /*
-     #swagger.security = [{
-        "sessionAuth": []
-    }]
+
     #swagger.tags = ['Applications']
     #swagger.summary = 'Update application'
 
@@ -99,9 +95,6 @@ router.put(
     updateApplication
 );
 
-//  #swagger.security = [{
-//         "sessionAuth": []
-//     }]
 
 router.delete(
     "/:id",
