# src/routes/roleRoutes.js
@@ -36,9 +36,7 @@ router.post(
     "/",
 
     /*
-     #swagger.security = [{
-        "sessionAuth": []
-    }]
+    
     #swagger.tags = ['Roles']
     #swagger.summary = 'Create role'
 
@@ -66,9 +64,7 @@ router.put(
     "/:id",
 
     /*
-     #swagger.security = [{
-        "sessionAuth": []
-    }]
+     
     #swagger.tags = ['Roles']
     #swagger.summary = 'Update role'
 
@@ -92,9 +88,7 @@ router.put(
     updateRole
 );
 
-//  #swagger.security = [{
-//         "sessionAuth": []
-//     }]
+
 router.delete(
     "/:id",
     isAuthenticated,
